--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "better-auth": "^1.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
+    "mongodb": "^7.1.0",
     "next": "16.1.6",
     "next-intl": "^4.8.3",
     "radix-ui": "^1.4.3",
